# QmlAnomaly

./: .gitignore  README.md  SETUP_GUIDE.md  environment.yaml  generate_and_compress_events.py  pyproject.toml  setup.py  test_installation.py  train_quantum_anomaly_detector.py
examples/analysis/: PIPELINE_SUMMARY.md  ZJETS_ANALYSIS_SUMMARY.md  verify_results.py  visualize_results.py
examples/simulation/: dijet_10_events.yaml  run_full_chain.py  run_pytorch_chain.py  run_simple_chain.py  run_zjets_full_chain.py  zjets_config.yaml  zjets_generator.py
qad/: __init__.py
qad/simulation/: README.md  __init__.py  config_parser.py  data_processor.py  example_config.yaml  example_usage.py  pythia_generator.py  run_pipeline.py  run_simulation.py  standalone_test.py  test_simulation.py
